--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Home</title>
+</head>
+<body>
+    <h1>Welcome to OrderGambia</h1>
+    <p><a href="{{ url_for('register') }}">Register as User</a></p>
+    <p><a href="{{ url_for('login') }}">Login as User</a></p>
+    <p><a href="{{ url_for('register_restaurant') }}">Register as Restaurant</a></p>
+    <p><a href="{{ url_for('restaurant_login') }}">Login as Restaurant</a></p>
+</body>
+</html>
